--- a/config.json
+++ b/config.json
@@ -13,6 +13,8 @@
 		"lib\\Filesystem.lib",
 		"lib\\Memory.lib",
 		"lib\\Streaming.lib",
-		"lib\\String.lib"
+		"lib\\String.lib",
+		"lib\\WSA.dll",
+		"lib\\WTM.dll"
 	]
 }
