--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
 		"/link",
 		"/NOD",
 		"/INCREMENTAL:NO",
+		"Secur32.lib",
 		"lib\\Filesystem.lib",
 		"lib\\Memory.lib",
 		"lib\\Streaming.lib",
